Fixed movement jitter on mobile (hopefully)

--- a/style.css
+++ b/style.css
@@ -27,7 +27,10 @@ html {
 }
 
 #page2.show {
-    top: 0;
+    -webkit-transform: translateY(100vh);
+    transform: translateY(100vh);
+    -webkit-transition: 0.75s ease;
+    transition: 0.75s ease;
 }
 
 #particles-js {
